syntax = "proto3";

package domain;

option go_package = "github.com/litmuschaos/go-util/internal/grpc/domain";

message name{
    string fileName = 1;
}

